@@ -171,12 +171,10 @@ Iobuf.seek(b: self ref Iobuf, off: big, start: int): big
 		return big ERROR;
 	b.size = 0;
 	b.index = 0;
-	if ((s := sys->seek(b.fd, off, start)) < big 0) {
-		b.filpos = b.bufpos = big 0;
+	if ((s := sys->seek(b.fd, off, start)) < big 0)
 		return big ERROR;
-	}
 	b.bufpos = b.filpos = s;
-	return b.bufpos = b.filpos = s;
+	return s;
 }
 
 Iobuf.offset(b: self ref Iobuf): big
