@@ -1,3 +1,7 @@
+20090728
+	emu/port/main.c: put host's working directory name as emuwdir
+	document initial environment variables in emu(1)
+	appl/lib/bufio.b dis/lib/bufio.dis [issue 199] don't lose track of actual file seek offset (following second suggestion of mjl)
 20090719
 	correct order of operands to memset(!), eg in ipif [mjl]
 20090718
